Input approach modified. Added status code for record not found
